--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 14:05:04 2018</p>
+         Last Run: Fri Jul 20 15:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -62,19 +62,19 @@
                         <td>6</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>15</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>29</td>
+                        <td>28</td>
                         <td>6</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>59</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -82,11 +82,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>5</td>
                         <td>14</td>
                         <td>WSW</td>
-                        <td>72</td>
+                        <td>74</td>
                      </tr>
                   </tbody>
                </table>
@@ -217,8 +217,8 @@
                  "48",
                  "40",
                  "32",
-                 "29",
-                 "27"
+                 "28",
+                 "26"
                ]
              },
              {
@@ -228,9 +228,9 @@
                "data":[
                  "4",
                  "10",
-                 "15",
-                 "59",
-                 "72"
+                 "14",
+                 "62",
+                 "74"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 14:05:04 2018</p>
+         Last Run: Fri Jul 20 15:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -272,35 +272,35 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>36</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>E</td>
-                        <td>29</td>
+                        <td>ENE</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>14</td>
-                        <td>38</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>12</td>
+                        <td>40</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>16</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>10</td>
-                        <td>45</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>NE</td>
-                        <td>8</td>
+                        <td>ENE</td>
+                        <td>2</td>
                      </tr>
                   </tbody>
                </table>
@@ -345,8 +345,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
-                 "20",
-                 "18"
+                 "19",
+                 "17"
                ]
              },
              {
@@ -356,8 +356,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
-                 "20",
-                 "18"
+                 "19",
+                 "17"
                ]
              }
            ]
@@ -409,7 +409,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "14",
+                 "12",
                  "10"
                ]
              },
@@ -418,9 +418,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "34",
-                 "38",
-                 "45"
+                 "36",
+                 "40",
+                 "48"
                ]
              },
              {
@@ -428,9 +428,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
-                 "16",
-                 "8"
+                 "7",
+                 "4",
+                 "2"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 14:05:04 2018</p>
+         Last Run: Fri Jul 20 15:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -471,19 +471,19 @@
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>7</td>
+                        <td>6</td>
                         <td>33</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>57</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>8</td>
+                        <td>7</td>
                         <td>36</td>
                         <td>1</td>
                         <td>13</td>
@@ -495,7 +495,7 @@
                         <td>Mostly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>10</td>
+                        <td>9</td>
                         <td>41</td>
                         <td>0</td>
                         <td>13</td>
@@ -520,11 +520,11 @@
                         <td>17</td>
                         <td>17</td>
                         <td>9</td>
-                        <td>58</td>
+                        <td>57</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>ESE</td>
-                        <td>60</td>
+                        <td>61</td>
                      </tr>
                   </tbody>
                </table>
@@ -640,9 +640,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "6",
                  "7",
-                 "8",
-                 "10",
+                 "9",
                  "7",
                  "9"
                ]
@@ -656,7 +656,7 @@
                  "36",
                  "41",
                  "48",
-                 "58"
+                 "57"
                ]
              },
              {
@@ -664,11 +664,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
+                 "58",
                  "59",
                  "61",
                  "61",
-                 "60"
+                 "61"
                ]
              }
            ]
