--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 15:05:04 2018</p>
+         Last Run: Fri Jul 20 16:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -50,31 +50,31 @@
                         <td>4</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>10</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>10</td>
+                        <td>9</td>
                         <td>32</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SW</td>
-                        <td>14</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>15</td>
-                        <td>28</td>
-                        <td>6</td>
+                        <td>33</td>
+                        <td>5</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>62</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -82,11 +82,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>26</td>
-                        <td>5</td>
+                        <td>28</td>
+                        <td>4</td>
                         <td>14</td>
                         <td>WSW</td>
-                        <td>74</td>
+                        <td>76</td>
                      </tr>
                   </tbody>
                </table>
@@ -135,7 +135,7 @@
                  "16",
                  "18",
                  "20",
-                 "20",
+                 "19",
                  "21"
                ]
              },
@@ -148,7 +148,7 @@
                  "16",
                  "18",
                  "20",
-                 "20",
+                 "19",
                  "21"
                ]
              }
@@ -204,7 +204,7 @@
                "data":[
                  "0",
                  "0",
-                 "10",
+                 "9",
                  "15",
                  "15"
                ]
@@ -217,8 +217,8 @@
                  "48",
                  "40",
                  "32",
-                 "28",
-                 "26"
+                 "33",
+                 "28"
                ]
              },
              {
@@ -227,10 +227,10 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "4",
-                 "10",
-                 "14",
-                 "62",
-                 "74"
+                 "9",
+                 "15",
+                 "67",
+                 "76"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 15:05:04 2018</p>
+         Last Run: Fri Jul 20 16:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 15:05:04 2018</p>
+         Last Run: Fri Jul 20 16:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -469,62 +469,62 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>6</td>
-                        <td>33</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>7</td>
+                        <td>31</td>
                         <td>2</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SE</td>
-                        <td>58</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>7</td>
-                        <td>36</td>
+                        <td>24</td>
+                        <td>24</td>
+                        <td>8</td>
+                        <td>34</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>ESE</td>
-                        <td>59</td>
+                        <td>SE</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>9</td>
-                        <td>41</td>
+                        <td>10</td>
+                        <td>38</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>61</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>7</td>
-                        <td>48</td>
+                        <td>Partly Cloudy</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>6</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>61</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>9</td>
-                        <td>57</td>
+                        <td>7</td>
+                        <td>56</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>ESE</td>
-                        <td>61</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -570,10 +570,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "25",
                  "24",
-                 "23",
                  "22",
-                 "19",
+                 "20",
                  "17"
                ]
              },
@@ -583,10 +583,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "25",
                  "24",
-                 "23",
                  "22",
-                 "19",
+                 "20",
                  "17"
                ]
              }
@@ -640,11 +640,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "7",
+                 "8",
+                 "10",
                  "6",
-                 "7",
-                 "9",
-                 "7",
-                 "9"
+                 "7"
                ]
              },
              {
@@ -652,11 +652,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "33",
-                 "36",
-                 "41",
-                 "48",
-                 "57"
+                 "31",
+                 "34",
+                 "38",
+                 "46",
+                 "56"
                ]
              },
              {
@@ -664,11 +664,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
-                 "59",
-                 "61",
-                 "61",
-                 "61"
+                 "52",
+                 "51",
+                 "47",
+                 "45",
+                 "44"
                ]
              }
            ]
