--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 17:05:04 2018</p>
+         Last Run: Fri Jul 20 18:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Clear</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>0</td>
-                        <td>48</td>
+                        <td>6</td>
+                        <td>50</td>
                         <td>3</td>
                         <td>10</td>
                         <td>S</td>
@@ -45,36 +45,36 @@
                         <td>Clear</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>0</td>
+                        <td>5</td>
                         <td>41</td>
                         <td>4</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>9</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>9</td>
-                        <td>32</td>
+                        <td>10</td>
+                        <td>33</td>
                         <td>6</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>15</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
                         <td>15</td>
                         <td>33</td>
-                        <td>5</td>
-                        <td>11</td>
+                        <td>6</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>67</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -83,10 +83,10 @@
                         <td>21</td>
                         <td>15</td>
                         <td>28</td>
-                        <td>4</td>
-                        <td>14</td>
+                        <td>6</td>
+                        <td>13</td>
                         <td>WSW</td>
-                        <td>76</td>
+                        <td>62</td>
                      </tr>
                   </tbody>
                </table>
@@ -202,9 +202,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
-                 "0",
-                 "9",
+                 "6",
+                 "5",
+                 "10",
                  "15",
                  "15"
                ]
@@ -214,9 +214,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "48",
+                 "50",
                  "41",
-                 "32",
+                 "33",
                  "33",
                  "28"
                ]
@@ -227,10 +227,10 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "4",
-                 "9",
-                 "15",
-                 "67",
-                 "76"
+                 "10",
+                 "16",
+                 "54",
+                 "62"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 17:05:04 2018</p>
+         Last Run: Fri Jul 20 18:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -272,19 +272,19 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>37</td>
                         <td>1</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>12</td>
-                        <td>40</td>
+                        <td>2</td>
+                        <td>42</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ENE</td>
@@ -295,11 +295,11 @@
                         <td>Clear</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>10</td>
-                        <td>48</td>
+                        <td>8</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>ENE</td>
+                        <td>NE</td>
                         <td>2</td>
                      </tr>
                   </tbody>
@@ -409,8 +409,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "12",
-                 "10"
+                 "2",
+                 "8"
                ]
              },
              {
@@ -418,9 +418,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
-                 "40",
-                 "48"
+                 "37",
+                 "42",
+                 "50"
                ]
              },
              {
@@ -428,7 +428,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "7",
+                 "6",
                  "4",
                  "2"
                ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 17:05:04 2018</p>
+         Last Run: Fri Jul 20 18:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -472,7 +472,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>6</td>
-                        <td>31</td>
+                        <td>32</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
@@ -523,7 +523,7 @@
                         <td>55</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>ESE</td>
+                        <td>SE</td>
                         <td>44</td>
                      </tr>
                   </tbody>
@@ -652,7 +652,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
+                 "32",
                  "34",
                  "38",
                  "46",
