--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 19:05:04 2018</p>
+         Last Run: Fri Jul 20 20:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 19:05:04 2018</p>
+         Last Run: Fri Jul 20 20:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -269,12 +269,12 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>ENE</td>
                         <td>6</td>
                      </tr>
@@ -284,22 +284,22 @@
                         <td>19</td>
                         <td>19</td>
                         <td>2</td>
-                        <td>42</td>
+                        <td>41</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>4</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>2</td>
+                        <td>7</td>
                         <td>50</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>NE</td>
+                        <td>ENE</td>
                         <td>2</td>
                      </tr>
                   </tbody>
@@ -344,7 +344,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "20",
+                 "21",
                  "19",
                  "17"
                ]
@@ -355,7 +355,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "20",
+                 "21",
                  "19",
                  "17"
                ]
@@ -410,7 +410,7 @@
                "data":[
                  "0",
                  "2",
-                 "2"
+                 "7"
                ]
              },
              {
@@ -418,8 +418,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "37",
-                 "42",
+                 "36",
+                 "41",
                  "50"
                ]
              },
@@ -429,7 +429,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "6",
-                 "4",
+                 "3",
                  "2"
                ]
              }
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 19:05:04 2018</p>
+         Last Run: Fri Jul 20 20:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -471,36 +471,36 @@
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>6</td>
-                        <td>31</td>
+                        <td>7</td>
+                        <td>30</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>33</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>7</td>
+                        <td>9</td>
                         <td>33</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SE</td>
-                        <td>37</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>8</td>
-                        <td>37</td>
+                        <td>11</td>
+                        <td>38</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>40</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -512,7 +512,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>42</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -524,7 +524,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>42</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -640,9 +640,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
                  "7",
-                 "8",
+                 "9",
+                 "11",
                  "24",
                  "24"
                ]
@@ -652,9 +652,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
+                 "30",
                  "33",
-                 "37",
+                 "38",
                  "45",
                  "54"
                ]
@@ -664,11 +664,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
-                 "37",
+                 "31",
+                 "35",
+                 "38",
                  "40",
-                 "42",
-                 "42"
+                 "40"
                ]
              }
            ]
